--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,6 +37,8 @@ html {
   --mat-sys-tertiary: #545f71;
   --mat-sys-on-tertiary: #ffffff;
 
+  --mat-sys-surface: #ffffff;
+
   // --- Typography ---
   --mat-sys-body-medium: 400 1rem/1.5rem Roboto, 'Helvetica Neue', sans-serif;
   --mat-sys-body-large: 400 1.125rem/1.75rem Roboto, 'Helvetica Neue', sans-serif;
